# onyx-mcp

./: .gitignore  README.md  agent_demo.py  check_balance.py  client_test.py  gen_wallet.py  llms.txt  pyproject.toml  register_indexers.py  render.yaml  requirements.txt  server.json  server.py  server_http.py  smithery.yaml  test_stdio.py  tools.py
.github/workflows/: keep-warm.yml
examples/: single_tool.py
onyx_paid_mcp/: __init__.py  app.py  bazaar.py
tools_pkg/: __init__.py  _cdp_client.py  _metadata.py  agent_signup_kit.py  agent_workflow.py  base_token_risk_scan.py  base_tx_decode.py  base_tx_explainer.py  base_tx_simulator.py  browser_click.py  browser_eval.py  browser_extract.py  browser_navigate.py  browser_screenshot.py  browser_type.py  dns_lookup.py  email_validate.py  ens_resolve.py  fx_convert.py  hash_compute.py  hlr_lookup.py  html_meta.py  ip_geolocate.py  jwt_decode.py  password_strength.py  robots_check.py  sms_verify.py  solve_captcha.py  token_metadata.py  url_parse.py  url_text.py  url_unshorten.py  user_agent_parse.py  whois_lookup.py
x402-bridge/: .npmignore  README.md  package.json  tsconfig.json
x402-bridge/src/: bridge.ts  cli.ts  index.ts
