[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "onyx-paid-mcp"
version = "0.1.0"
description = "Build a paid MCP server in 5 lines. USDC settlement on Base via x402."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Onyx Council", email = "intelligence@onyx.local" }]
keywords = [
    "mcp", "model-context-protocol", "x402", "usdc", "base",
    "agentic", "paid-mcp", "ai-agents", "micropayments", "stripe-for-agents",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "mcp>=1.0.0",
    "x402[evm,fastapi]>=2.8.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/dimitrilaouanis-tech/onyx-mcp"
Repository = "https://github.com/dimitrilaouanis-tech/onyx-mcp"
"Live Reference" = "https://onyx-actions.onrender.com"

[tool.hatch.build.targets.wheel]
packages = ["onyx_paid_mcp"]
